# PanDaA2Key

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  드라이버 설치.bat  드라이버 제거.bat  빌드.bat  실행.bat
app/: globals.css  layout.tsx  page.tsx
app/macro/: page.tsx
app/macro/edit/: page.tsx
app/overlay/: page.tsx
components/: app-shell.tsx  first-run-setup.tsx  site-header.tsx  theme-toggle.tsx  update-dialog.tsx
components/macro/: context-menu.tsx  delay-preset-card.tsx  engine-runtime.tsx  hotkey-capture-button.tsx  key-capture-button.tsx  macro-set-card.tsx  presets-panel.tsx  save-load.tsx  step-editor.tsx  wheel-number.tsx
components/ui/: button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  sonner.tsx  switch.tsx  tooltip.tsx
lib/: tauri.ts  update-store.ts  updater.ts  utils.ts
lib/macro/: capture.ts  io.ts  keys.ts  runtime.ts  store.ts  types.ts
src-tauri/: Cargo.toml  build.rs  installer.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: fps.rs  inject.rs  keycodes.rs  lib.rs  macro_engine.rs  main.rs  resources.rs
