[package]
name = "panda-key"
version = "2.0.2"
description = "PANDA KEY — 매크로 키 입력 프로그램"
authors = ["PandaA2"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "panda_key_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# 릴리즈 경량화 + 안정화
# - lto/codegen-units=1/opt-level="s"/strip: 바이너리 크기 대폭 축소
# - panic="abort": 저수준 후킹 콜백(extern "system")에서 패닉 언와인딩은 UB —
#   abort 로 즉시 종료해 키 끼임/좀비 상태 방지(애매한 상태로 계속 도는 것보다 안전)
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows 저수준 후킹(WH_KEYBOARD_LL / WH_MOUSE_LL) + SendInput 주입
[target.'cfg(windows)'.dependencies]
# Interception 드라이버(interception.dll) 런타임 동적 로드 — 물리 입력 모드
libloading = "0.8"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
]
